Projects/Kubernetes-Microservice-Phonebook-Project/Solution_Files/Kubernetes-files/result_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resultserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: resultserver
  template:
    metadata:
      labels:
        app: resultserver
    spec:
      containers:
      - name: resultserver
        image: mesutal/k8s-project1-resultserver:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
