Projects/Kubernetes-Microservice-Phonebook-Project/Solution_Files/Kubernetes-files/web_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: mesutal/k8s-project1-webserver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
