Projects/Kubernetes-Microservice-Phonebook-Project/Solution_Files/Kubernetes-files/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: mysql
spec:
  type: ClusterIP 
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
