Projects/Kubernetes-Microservice-Phonebook-Project/Solution_Files/Kubernetes-files/result_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resultserver-service
  labels:
    app: resultserver
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30002   
  selector:
    app: resultserver
