Projects/Kubernetes-Microservice-Phonebook-Project/Solution_Files/Kubernetes-files/web_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  labels:
    app: webserver
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001  
  selector:
    app: webserver
